[package]
name = "winreg_interrogate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg_common = { path = "../winreg_common" }
bytes = { version = "1.4.0", features = ["serde"] }
utf16string = "0.2.0"
rayon = "1.7"
